# k-lang

./: .gitignore  CMakeLists.txt  pendientes.txt  snippets.txt
src/: Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Semantic.cpp  Semantic.h  StmtExpression.cpp  StmtExpression.h  Visitor.h  VisitorExpression.h  VisitorStatement.h  main.cpp
src/Core/: KCallable.h  KData.cpp  KData.h  KFunction.cpp  KFunction.h  Return.cpp  Return.h
src/Exceptions/: NotImplementedYetException.cpp  NotImplementedYetException.h  ParserException.cpp  ParserException.h  RuntimeException.cpp  RuntimeException.h  ScannerException.cpp  ScannerException.h  SemanticException.cpp  SemanticException.h
src/Inter/: Environment.cpp  Environment.h  ExprArithmetic.cpp  ExprArithmetic.h  ExprAssignment.cpp  ExprAssignment.h  ExprCallFunction.cpp  ExprCallFunction.h  ExprGet.cpp  ExprGet.h  ExprGrouping.cpp  ExprGrouping.h  ExprLiteral.cpp  ExprLiteral.h  ExprLogical.cpp  ExprLogical.h  ExprRelational.cpp  ExprRelational.h  ExprSet.cpp  ExprSet.h  ExprSuper.cpp  ExprSuper.h  ExprThis.cpp  ExprThis.h  ExprUnary.cpp  ExprUnary.h  ExprVariable.cpp  ExprVariable.h  Expression.h  Interpreter.cpp  Interpreter.h  KCallable.h  KFunction.cpp  KFunction.h  Object.cpp  Object.h  Statement.h  StmtBlock.cpp  StmtClass.h  StmtFunction.h  (+8 more)
src/Interpret/: Environment.cpp  Interpreter.cpp  Interpreter.h  KCallable.h  KFunction.cpp  KFunction.h
src/Token/: IdToken.cpp  IdToken.h  NombreToken.cpp  NumberToken.cpp  NumberToken.h  StringToken.cpp  TToken.h  (+5 more)
(+163 files in other folders)
